--- a/index.html
+++ b/index.html
@@ -7,27 +7,20 @@
     <script></script>
   </head>
   <body>
-    <div id="root1">
+    <div id="root">
       <h1>Hello World using HTML</h1>
     </div>
-    <div id="root2"></div>
   </body>
   <!-- react.development.js contains React code return in plain Javascript  -->
-  <script
-    crossorigin
-    src="https://unpkg.com/react@18/umd/react.development.js"
-  ></script>
+  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
   <!-- react-dom.development.js is used for DOM operations and updating DOM  -->
-  <script
-    crossorigin
-    src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"
-  ></script>
+  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   <script>
     // Using Javascript
     const heading = document.createElement("h2");
     heading.innerHTML = "Hello World using Javascript";
 
-    const divElement = document.getElementById("root1");
+    const divElement = document.getElementById("root");
     divElement.appendChild(heading);
 
     // Using React
@@ -36,8 +29,8 @@
       {},
       "Hello World using React"
     );
-    // If root1 is passed, then ReactDOM will replace all the existing content and render all elements content created in React
-    const root = ReactDOM.createRoot(document.getElementById("root2"));
+    // React will overwrite everything inside "root1" and replaces with whatever given inside render
+    const root = ReactDOM.createRoot(document.getElementById("root"));
     root.render(headingWithReact);
   </script>
 </html>
