--- a/index.html
+++ b/index.html
@@ -4,33 +4,39 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <script></script>
+    <!-- react.development.js contains React code return in plain Javascript  -->
+    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
+    <!-- react-dom.development.js is used for DOM operations and updating DOM  -->
+    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   </head>
   <body>
     <div id="root">
-      <h1>Hello World using HTML</h1>
+      <div id="parent">
+        <div id="child1">
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+        </div>
+        <div id="child2">
+          <h1>Heading 1</h1>
+          <h2>Heading 2</h2>
+        </div>
+      </div>
     </div>
   </body>
-  <!-- react.development.js contains React code return in plain Javascript  -->
-  <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-  <!-- react-dom.development.js is used for DOM operations and updating DOM  -->
-  <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
+
   <script>
-    // Using Javascript
-    const heading = document.createElement("h2");
-    heading.innerHTML = "Hello World using Javascript";
+    const parent = React.createElement("div", { id: "parent" }, [
+      React.createElement("div", { id: "child1" }, [
+        React.createElement("h1", { id: "heading_1" }, "Heading 1"),
+        React.createElement("h2", { id: "heading_2" }, "Heading 2"),
+      ]),
+      React.createElement("div", { id: "child2" }, [
+        React.createElement("h1", { id: "heading_3" }, "Heading 3"),
+        React.createElement("h2", { id: "heading_4" }, "Heading 4"),
+      ]),
+    ]);
 
-    const divElement = document.getElementById("root");
-    divElement.appendChild(heading);
-
-    // Using React
-    const headingWithReact = React.createElement(
-      "h3",
-      {},
-      "Hello World using React"
-    );
-    // React will overwrite everything inside "root1" and replaces with whatever given inside render
     const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(headingWithReact);
+    root.render(parent);
   </script>
 </html>
