Installed React & React-DOM. Started using React from local module than CDN link.

--- a/index.html
+++ b/index.html
@@ -4,39 +4,9 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <!-- react.development.js contains React code return in plain Javascript  -->
-    <script src="https://unpkg.com/react@18/umd/react.development.js"></script>
-    <!-- react-dom.development.js is used for DOM operations and updating DOM  -->
-    <script src="https://unpkg.com/react-dom@18/umd/react-dom.development.js"></script>
   </head>
   <body>
-    <div id="root">
-      <div id="parent">
-        <div id="child1">
-          <h1>Heading 1</h1>
-          <h2>Heading 2</h2>
-        </div>
-        <div id="child2">
-          <h1>Heading 1</h1>
-          <h2>Heading 2</h2>
-        </div>
-      </div>
-    </div>
+    <div id="root"></div>
   </body>
-
-  <script>
-    const parent = React.createElement("div", { id: "parent" }, [
-      React.createElement("div", { id: "child1" }, [
-        React.createElement("h1", { id: "heading_1" }, "Heading 1"),
-        React.createElement("h2", { id: "heading_2" }, "Heading 2"),
-      ]),
-      React.createElement("div", { id: "child2" }, [
-        React.createElement("h1", { id: "heading_3" }, "Heading 3"),
-        React.createElement("h2", { id: "heading_4" }, "Heading 4"),
-      ]),
-    ]);
-
-    const root = ReactDOM.createRoot(document.getElementById("root"));
-    root.render(parent);
-  </script>
+  <script type="module" src="./App.js"></script>
 </html>
