--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <title>Document</title>
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root">
+      <p>Not Rendered</p>
+    </div>
   </body>
   <script type="module" src="./App.js"></script>
 </html>
