Basic Restaurant UI created.

--- a/index.html
+++ b/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Namaste React</title>
+    <link rel="stylesheet" href="./index.css" />
   </head>
   <body>
-    <div id="root">
-      <p>Not Rendered</p>
-    </div>
+    <div id="root"></div>
+    <script type="module" src="./src/App.js"></script>
   </body>
-  <script type="module" src="./App.js"></script>
 </html>
